# event-tracker

./: .env.example  .gitignore  CLAUDE.md  GITHUB_WORKFLOW.md  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: llm.py  memory.py  memory_blob.py  prompts.py  runtime.py  schemas.py  tools.py  turn_budget.py
backend/app/api/: deps.py  routes_appointments.py  routes_calendar.py  routes_chat.py  routes_digest.py  routes_events.py  routes_feedback.py  routes_profile.py
backend/app/db/: __init__.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/models/: __init__.py  appointment.py  chat_message.py  digest_cache.py  event.py  feedback.py  saved_event.py  user.py
backend/app/ingestion/: base.py  eventbrite.py  normalize.py  scheduler.py  ticketmaster.py
backend/app/rag/: chroma_store.py  embeddings.py
backend/app/schemas/: appointment.py  calendar.py  chat.py  common.py  digest.py  events.py  feedback.py  profile.py  usage.py
backend/app/web_research/: client.py  extractor.py  ingest.py  prompts.py  schemas.py
backend/scripts/: ingest.py  reset_agent_thread.py  seed_default_appointments.py
backend/tests/: conftest.py  test_config.py
backend/tests/agent/: conftest.py  test_edit_facts_tool.py  test_edit_taste_summary_tool.py  test_llm.py  test_memory.py  test_memory_blob.py  test_prompts.py  test_reply_discipline.py  test_runtime.py  test_schemas.py  test_tools.py  test_turn_budget.py
backend/tests/api/: test_deps.py  test_main.py  test_routes_appointments.py  test_routes_calendar.py  test_routes_chat.py  test_routes_digest.py  test_routes_events.py  test_routes_feedback.py  test_routes_profile.py
backend/tests/contract/: test_fixtures.py
backend/tests/db/: test_appointment.py  test_chat_message.py  test_digest_cache.py  test_event.py  test_feedback.py  test_saved_event.py  test_session.py  test_user.py
backend/tests/ingestion/: conftest.py  test_eventbrite.py  test_hamburg_scraper.py  test_normalize.py  test_scheduler.py  test_ticketmaster.py
backend/tests/integration/: test_chat_sse.py  test_digest_cycle.py
backend/tests/rag/: test_chroma_store.py  test_embeddings.py
backend/tests/schemas/: test_appointment.py  test_calendar.py  test_chat.py  test_common.py  test_digest.py  test_events.py  test_feedback.py  test_profile.py  test_usage.py
backend/tests/scripts/: test_seed_default_appointments.py
backend/tests/web_research/: test_client.py  test_extractor.py  test_ingest.py  test_schemas.py
docs/: PRD.md  TODO  (+2 more)
(+102 files in other folders)
